Add support for Java 23.